fixed header issue on mobile

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -10,7 +10,6 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  overflow: hidden;
 }
 
 @media (min-width: 768px) {
