--- a/code/src/style/header.css
+++ b/code/src/style/header.css
@@ -6,7 +6,7 @@
   display: flex;
   align-items: flex-end;
   justify-content: center;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
 }
