--- a/code/src/style/survey.css
+++ b/code/src/style/survey.css
@@ -1,5 +1,5 @@
 .survey-container {
-  width: 95%;
+  width: 88%;
   height: 250px;
   padding: 30px 20px;
   margin: 0 auto;
